# DS_ML_Engineering

./: README.md
module_2/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
module_2/src/: infer.py
module_3/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  run_all.sh
module_3/app/: Dockerfile  infer.py  run.sh  train.py  utils.py
module_3/mlflow_server/: Dockerfile
module_4/: .gitignore  README.md  docker-compose.yaml  requirements.txt  run_all.sh
module_4/dags/: wine_preprocessing_dag.py
module_4/mlflow_server/: Dockerfile
module_4/src/: cleaning.py  config.py  data_download.py  data_merge.py  inference.py  preprocessing.py  splitting.py  training.py
module_5/: .gitignore  docker-compose.yaml  online.Dockerfile  pyproject.toml  requirements.txt  run_all.sh
module_5/dags/: wine_deployment_dag.py
module_5/postgres/: init.sql
module_5/src/wine_deployment/: app.py  cleaning.py  data_download.py  preprocessing.py  splitting.py
module_5/tests/: test_api.py  test_data_steps.py  test_pipeline.py
module_6/: .gitignore  README.md  requirements.txt  sagemaker.Dockerfile
module_6/dags/: wine_deployment_dag.py
module_6/mlflow_server/: Dockerfile
module_6/src/wine_deployment/: inference.py  sagemaker_app.py  training.py
module_7/: .gitignore  README.md  dvc.yaml  params.yaml  requirements.txt
module_7/.dvc/: config
module_7/dags/: wine_deployment_dag.py
module_7/dvclive/: metrics.json
module_7/tests/: test_dvc_pipeline_config.py
(+10 files in other folders)
