[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wine-deployment"
version = "0.1.0"
description = "Wine quality model deployment in REST and batch modes"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.4",
    "numpy==1.26.4",
    "scikit-learn==1.6.1",
    "mlflow==3.0.1",
    "requests==2.32.3",
    "matplotlib==3.8.4",
    "pytest==8.3.5",
    "psycopg2-binary==2.9.10",
    "docker==7.1.0",
    "Flask==2.2.5",
    "Werkzeug==2.2.3",
    "protobuf==4.25.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]